# energy-stats-uk-experiments

./: .history  Cargo.toml  NOTICE  new.csv  new_without.csv
src/: csv_experiments.rs  datafusion_experiments.rs  datafusion_new.rs  main.rs  polars_experiments.rs
